example/test-named-arguments.co
fun foo(a, b int, c uint) int
fun bar(int, int, uint) int

fun main() int
  foo(1, 2, 3)        // ok
  foo(1, c=3, b=2)    // ok
  bar(1, 2, 3)        // ok
  // bar(1, c=3, b=2) // error: cannot call with named parameters
  // foo(1, 2)        // error: missing argument
  // foo(1, 2, 3, 4)  // error: extra argument
  // foo(1, c=3, c=2) // error: duplicate arguments
  // foo(1, c=3, x=2) // error: no parameter named "x"
